# Caroline

./: .gitignore  CairoLine.vala  Caroline.vala  Caroline.vala~  LICENSE  README.md  Sample.vala  UnitTests.vala  caroline-0.3.deps  demo  meson.build  sample.vala
.github/workflows/: main.yml
build_dev/: Caroline.h  Caroline.vapi  build.sh  demo
src/: .Caroline.vala.swp  .Sample.vala.swp  Caroline.h  Caroline.vala  Caroline.vapi  Sample.vala  demo
src/types/: Bar.vala  Line-Smooth.vala  Line.vala  LineSmooth.vala  Pie.vala  Scatter.vala  bar.vala  line.vala  pie.vala  scatter.vala  smooth-line.vala
